# sas_object_store

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  client.h  handle.cpp  handle.h  hash_table.h  hazard.cpp  hazard.h  host.cpp  host_drivers.h  memory_pool.h  setup.sh  store.cpp  store.h  tagged_ptr.h
benchmarks/: arch_workload.h  benchmark.h  compare_backends.cpp  compare_ebr.cpp  compare_hp.cpp  compare_hybrid.cpp  compare_lockfree.cpp  compare_rwlock.cpp  compare_sharded.cpp  compare_shm.cpp  compare_spinlock.cpp  config.ini  end_to_end.cpp  run_benchmarks.py  run_ycsb.py  sas.cpp  sharded_store.h  spinlock_store.h  timing.h  workload.h
benchmarks/ycsb/: LightningClient.java  RecordCodec.java  SasClient.java  SasYcsbDriver.java  YcsbDriver.java  sas_jni.cpp
example/: bench.cpp  hello.cpp  test_concurrency.cpp  test_counter.cpp  test_free.cpp  world.cpp
hash_tables/: ebr.cpp  ebr.h  hazard.cpp  hazard.h  hp_store.cpp  hp_store.h  hybrid.h  sharded.h  spinlock.h
presentation/: main.tex
report/: usenix2019_v3.1.tex
results/bench_end_to_end/num_keys/: num_keys_1024.json  num_keys_1048576.json  num_keys_16384.json  num_keys_16777216.json  num_keys_262144.json  num_keys_4096.json  num_keys_4194304.json  num_keys_65536.json
results/bench_end_to_end/num_threads/: num_threads_1.json  num_threads_16.json  num_threads_2.json  num_threads_24.json  num_threads_32.json  num_threads_4.json  num_threads_48.json  num_threads_64.json  num_threads_8.json
results/bench_end_to_end/read_ratio/: read_ratio_0.0.json  read_ratio_0.25.json  read_ratio_0.5.json  read_ratio_0.75.json  read_ratio_0.9.json  read_ratio_0.95.json  read_ratio_0.99.json  read_ratio_1.0.json
results/bench_end_to_end/zipf_theta/: zipf_theta_0.0.json  zipf_theta_0.25.json  zipf_theta_0.5.json  zipf_theta_0.75.json  zipf_theta_0.99.json  zipf_theta_1.25.json  zipf_theta_1.5.json
results/bench_sas/num_keys/: num_keys_1024.json  num_keys_1048576.json  num_keys_16384.json  num_keys_16777216.json  num_keys_262144.json  num_keys_4096.json  num_keys_4194304.json  num_keys_65536.json
results/bench_sas/num_threads/: num_threads_1.json  num_threads_16.json  num_threads_2.json  num_threads_24.json  num_threads_32.json  num_threads_4.json  num_threads_48.json  num_threads_64.json  num_threads_8.json
results/compare_backends/num_keys/: num_keys_1024.json  num_keys_1048576.json  num_keys_16384.json  num_keys_16777216.json  num_keys_262144.json  num_keys_4096.json  num_keys_4194304.json  num_keys_65536.json
results/compare_backends/num_threads/: num_threads_1.json  num_threads_16.json  num_threads_2.json  num_threads_24.json  num_threads_32.json  num_threads_4.json  num_threads_48.json  num_threads_64.json  num_threads_8.json
results/compare_backends/read_ratio/: read_ratio_0.0.json  read_ratio_0.25.json  read_ratio_0.5.json  read_ratio_0.75.json  read_ratio_0.9.json  read_ratio_0.95.json  read_ratio_0.99.json  read_ratio_1.0.json
results/compare_backends/zipf_theta/: zipf_theta_0.0.json  zipf_theta_0.25.json  zipf_theta_0.5.json  zipf_theta_0.75.json  zipf_theta_0.99.json  zipf_theta_1.25.json  zipf_theta_1.5.json
results/compare_ebr/num_keys/: num_keys_1024.json  num_keys_1048576.json  num_keys_16384.json  num_keys_16777216.json  num_keys_262144.json  num_keys_4096.json  num_keys_4194304.json  num_keys_65536.json
results/compare_ebr/num_threads/: num_threads_1.json  num_threads_16.json  num_threads_2.json  num_threads_24.json  num_threads_32.json  num_threads_4.json  num_threads_48.json  num_threads_64.json  num_threads_8.json
results/compare_ebr/read_ratio/: read_ratio_0.0.json  read_ratio_0.25.json  read_ratio_0.5.json  read_ratio_0.75.json  read_ratio_0.9.json  read_ratio_0.95.json  read_ratio_0.99.json  read_ratio_1.0.json
results/compare_ebr/zipf_theta/: zipf_theta_0.0.json  zipf_theta_0.25.json  zipf_theta_0.5.json  zipf_theta_0.75.json  zipf_theta_0.99.json  zipf_theta_1.25.json  zipf_theta_1.5.json
results/compare_hp/num_keys/: num_keys_1024.json  num_keys_1048576.json  num_keys_16384.json  num_keys_16777216.json  num_keys_262144.json  num_keys_4096.json  num_keys_4194304.json  num_keys_65536.json
results/compare_hp/num_threads/: num_threads_1.json  num_threads_16.json  num_threads_2.json  num_threads_24.json  num_threads_32.json  num_threads_4.json  num_threads_48.json  num_threads_64.json  num_threads_8.json
results/compare_hp/read_ratio/: read_ratio_0.0.json  read_ratio_0.25.json  read_ratio_0.5.json  read_ratio_0.75.json  read_ratio_0.9.json  read_ratio_0.95.json  read_ratio_0.99.json  read_ratio_1.0.json
results/compare_hp/zipf_theta/: zipf_theta_0.0.json  zipf_theta_0.25.json  zipf_theta_0.5.json  zipf_theta_0.75.json  zipf_theta_0.99.json  zipf_theta_1.25.json  zipf_theta_1.5.json
results/compare_hybrid/num_keys/: num_keys_1024.json  num_keys_1048576.json  num_keys_16384.json  num_keys_16777216.json  num_keys_262144.json  num_keys_4096.json  num_keys_4194304.json  num_keys_65536.json
results/compare_hybrid/num_threads/: num_threads_1.json  num_threads_16.json  num_threads_2.json  num_threads_24.json  num_threads_32.json  num_threads_4.json  num_threads_48.json  num_threads_64.json  num_threads_8.json
results/compare_hybrid/read_ratio/: read_ratio_0.0.json  read_ratio_0.25.json  read_ratio_0.5.json  read_ratio_0.75.json  read_ratio_0.9.json  read_ratio_0.95.json  read_ratio_0.99.json  read_ratio_1.0.json
results/compare_hybrid/zipf_theta/: zipf_theta_0.0.json  zipf_theta_0.25.json  zipf_theta_0.5.json  zipf_theta_0.75.json  zipf_theta_0.99.json  zipf_theta_1.25.json  zipf_theta_1.5.json
tests/: basic.cpp  concurrent.cpp  disjoint.cpp  dtor.cpp  gc.cpp  lifetime.cpp  publish_poll.cpp  test_basic.cpp  test_concurrent.cpp  test_dtor.cpp  test_gc.cpp  test_ref.cpp
wolfiej-k/: .clang-tidy  .clangd  .gitignore  README.md  ai-usage.md
wolfiej-k/presentation/: main.tex
wolfiej-k/report/: usenix2019_v3.1.bib
wolfiej-k/src/: CMakeLists.txt  Makefile  handle.h  host_runtime.h  memory_pool.h  setup.sh  tagged_ptr.h
wolfiej-k/src/benchmarks/: memory.h  (+12 more)
(+317 files in other folders)
